Fixing up a few more layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ nav {
 
 .section1
 {
-    height: 75%;
+    height: 60%;
 }
 .logo {
       float: left;
@@ -222,11 +222,13 @@ nav ul li a:hover {
 .wrapper{
 
     width:100%;
-    height:100%;
+    height:50%;
     display:flex;
     align-items:center;
     justify-content:center;
+    margin-top: 5%;
 }
+
 .wrapper .file-upload{
 
     height:200px;
@@ -270,7 +272,7 @@ color:#2590EB;
     }
 
 .uploaded{
-    margin-top:-30%;
+    margin-bottom:-30%;
     text-align: center;
     font-size: 18px;
     font-weight: 600;
@@ -436,10 +438,11 @@ color:#2590EB;
 
 .chart
 {
-      width: 35%;
+      width: 40%;
       height:auto;
       margin-left: 5%;
       float:left;
+      padding-bottom: 30px;
 }
 
 .chartdata
